Fix skin overflow + search submit spacing

--- a/Hogwarts/Hufflepuff/desktop.css
+++ b/Hogwarts/Hufflepuff/desktop.css
@@ -624,7 +624,7 @@ tr:hover {
 .skins.home .userstuff,
 .skins.home .stats,
 .skins.home .type {
-  margin-right: 0;
+  margin-inline: 0 !important;
   text-align: right;
 }
 
@@ -1602,6 +1602,10 @@ form fieldset>p.submit {
 
 form fieldset dl+p.submit {
   padding-top: .75em;
+}
+
+form fieldset:first-of-type .submit {
+  padding-bottom: .75em;
 }
 
 form fieldset .actions:first-child {
